--- a/main.html
+++ b/main.html
@@ -10,7 +10,25 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<img src="38.jpg" alt="my village">
+<h1>Sunny kumar</h1>
+<a href="https://www.linkedin.com/in/abhishek-pandey-807790227">click here to see my linkdin profile</a>
+<section id="skills">
+	
+	<ul>
+		<li>Html</li>
+		<li>java</li>
+		<li>css</li>
+		<li>javascript</li>
+	</ul>
+</section>
 
+<section id="projects">
+	<ul>
+		<li>DYNAMIC</li>
+		<li>STATIC WEB</li>
+	</ul>
+</section>
 </body>
 
 </html>
